lf_check.py : added lf qa link to output report lf_qa.py : removed None prior to sorting lists to prevent exceptions ct_us_002_tests.json : updated test_l3_longevity.py test report.css , reduced the size of copy button to 10 px to prevent jumping.

--- a/py-scripts/artifacts/report.css
+++ b/py-scripts/artifacts/report.css
@@ -368,8 +368,8 @@ td.scriptdetails span.copybtn {
 }
 td.scriptdetails:hover span.copybtn {
    display: inline-block;
-   padding: 5px;
-   font-size: 12px;
+   padding: 2px;
+   font-size:10px;
    float: left;
    color: #050;
    background: white;
